--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <script>
   const messages = [
-    "All the time i need your shining smile 😄
+    "All the time i need your shining smile 😄",
     "You are my sunshine! ☀️",
     "My heart beats for you. 💓",
     "Forever and always, it's you. 🌹",
